fixed z-index bug on activee details icon, made CreateActivity.js inaccessible for unauthorized users

--- a/src/assets/css/ActiveeDetails.css
+++ b/src/assets/css/ActiveeDetails.css
@@ -6,12 +6,14 @@
   cursor: pointer;
 }
 .activee-details-expand-icon {
+  position: relative;
   flex: 0 0 32px;
   width: 32px;
   height: 32px;
   transition: 200ms;
+  z-index: -1;
 }
 .activee-details-expand-icon.open {
-  -ms-transform: rotate(180deg);
+  z-index: -1;
   transform: rotate(180deg);
 }
